# citadel_sdk_2.1.1

./: README  buildlist.json  citadel.kdev4  citadel.sublime-workspace  release.txt
bcm-secimage/: Makefile  big2little  (+35 more)
driver_mpos_2.1.1/apps/ut/tests/: CMakeLists.txt  Makefile  test.h
driver_mpos_2.1.1/apps/ut/tests/cpu/: CMakeLists.txt  Makefile
driver_mpos_2.1.1/apps/ut/tests/drivers/adc/: CMakeLists.txt  test_adc.c
driver_mpos_2.1.1/apps/ut/tests/drivers/clock_control/: CMakeLists.txt  test_clocks.c
driver_mpos_2.1.1/apps/ut/tests/drivers/crypto/: pci_eval_test.c  test_mbedtls.c
driver_mpos_2.1.1/apps/ut/tests/drivers/dma/: CMakeLists.txt  Makefile
driver_mpos_2.1.1/apps/ut/tests/drivers/dmu/: CMakeLists.txt
driver_mpos_2.1.1/apps/ut/tests/drivers/flextimer/: test_ft.c
driver_mpos_2.1.1/apps/ut/tests/drivers/gpio/: CMakeLists.txt
driver_mpos_2.1.1/apps/ut/tests/drivers/i2c/: test_i2c.c
driver_mpos_2.1.1/apps/ut/tests/drivers/keypad/: CMakeLists.txt  test_keypad.c
driver_mpos_2.1.1/apps/ut/tests/drivers/lcd/: Makefile
driver_mpos_2.1.1/apps/ut/tests/drivers/pka/: sha512.c
driver_mpos_2.1.1/apps/ut/tests/fp_spi/: Makefile  test_fp_spi.c
driver_mpos_2.1.1/apps/ut/tests/zbar/: QR_Image_YUY2_QQVGA.c
driver_mpos_2.1.1/drivers/broadcom/: CMakeLists.txt
driver_mpos_2.1.1/drivers/broadcom/bbl/: Makefile  bbl_bcm5820x.c  bbl_regs.h
driver_mpos_2.1.1/drivers/broadcom/clock_control/: CMakeLists.txt  clocks_bcm58202.c
driver_mpos_2.1.1/drivers/broadcom/crypto/: Makefile  crypto_rng.c  crypto_symmetric.c  gf8_func.c  gf8_func.h
driver_mpos_2.1.1/drivers/broadcom/crypto/mbedtls/: aes_alt.c  ecdh_alt.c  ecdsa_alt.c  gcm_alt.c  rsa_alt.c  sha256_alt.c
driver_mpos_2.1.1/drivers/broadcom/dma/: CMakeLists.txt  Makefile  dma_pl080.c
driver_mpos_2.1.1/drivers/broadcom/dmu/: dmu_bcm58202.c
driver_mpos_2.1.1/drivers/broadcom/flextimer/: Makefile  ft.c
driver_mpos_2.1.1/drivers/broadcom/gpio/: Kconfig  Makefile  gpio_bcm58202.c
driver_mpos_2.1.1/drivers/broadcom/i2c/: Makefile
driver_mpos_2.1.1/drivers/broadcom/keypad/: CMakeLists.txt  Makefile  keypad.c
driver_mpos_2.1.1/drivers/broadcom/lcd/: CMakeLists.txt  Makefile  lcd_ili9341.c
driver_mpos_2.1.1/drivers/broadcom/msr/: Makefile
driver_mpos_2.1.1/drivers/broadcom/pinmux/: CMakeLists.txt  Makefile
driver_mpos_2.1.1/drivers/broadcom/pka/: CMakeLists.txt  Makefile
driver_mpos_2.1.1/drivers/broadcom/pm/: mproc_pm.c  readme.txt  save_restore.c  smbus.c
driver_mpos_2.1.1/drivers/broadcom/pm/crmu/: M0_mbox_body.c  M0_scripts.lds  M0_smbus.c  M0_usb.c  M0_wakeup_body.c  M0_wakeup_entry.c  M0_wfi.c  ihost_config.c  mbox_defines.h  regaccess.h
driver_mpos_2.1.1/drivers/broadcom/qspi_flash/: CMakeLists.txt  Kconfig  qspi_bcm58202_giga_device.c  qspi_bcm58202_macronix.c  qspi_bcm58202_micron.c  qspi_bcm58202_winbond.c  qspi_bcm58202_xmc.c  qspi_memcpy_src_unaligned.S
driver_mpos_2.1.1/drivers/broadcom/rtc/: Makefile
driver_mpos_2.1.1/drivers/broadcom/sc/: sc_acos2.c  sc_acos2.h  sc_cit.c  sc_cit_atrpriv.c  sc_cit_priv.c
driver_mpos_2.1.1/drivers/broadcom/sdio/: CMakeLists.txt  Kconfig  sdio_bcm5820x.c  sdio_bcm5820x_regs.h
driver_mpos_2.1.1/drivers/broadcom/smau/: CMakeLists.txt  Makefile  smau.c
driver_mpos_2.1.1/drivers/broadcom/smc/: CMakeLists.txt
driver_mpos_2.1.1/drivers/broadcom/sotp/: sotp.c  sotp_crc_table.h
driver_mpos_2.1.1/drivers/broadcom/spi/: Kconfig  spi_bcm58202_legacy.c
driver_mpos_2.1.1/drivers/broadcom/spl/: CMakeLists.txt  Makefile  spl_bcm58202.c
driver_mpos_2.1.1/drivers/broadcom/spru/: Makefile  spru_bbl_access.c
driver_mpos_2.1.1/drivers/broadcom/timer/: timer_bcm58202.c
driver_mpos_2.1.1/drivers/broadcom/unicam/: li_v024m.c  unicam_bcm5820x_csi.h
driver_mpos_2.1.1/drivers/broadcom/usb/ccid/: ccidct.c  ccidctclass.h  ccidmemblock.h  ccidversion.c
driver_mpos_2.1.1/drivers/broadcom/usb/cv/: cvapi.h  cvdevhandler.c  cvdiag.h  cvfpstore.c  cvfpstore.h  cvhandler.c  cvinit.c  cvmain.c  cvmain.h  cvobjstore.c  cvutils.c  easyzlib.c  extintf.c  sbi_cs_usbdtest_makefile.inc
driver_mpos_2.1.1/drivers/broadcom/usb/stubs/: cvinterface.h  phx.h  stub.h
driver_mpos_2.1.1/drivers/broadcom/usb/usbcvclass/: Makefile  cvinterface.c  cvmemblock.h  sbi_cs_usbdtest_makefile.inc
driver_mpos_2.1.1/drivers/broadcom/usb/usbd/: usbdevice.c
driver_mpos_2.1.1/drivers/broadcom/usb/usbhost/: Makefile  cfeglue.h  ehci.c  ehci.h  lib_queue.c  lib_queue.h  ohci.c  usb_host.h  usbchap9.h  usbd.h  usbdebug.c  usbmain.c
driver_mpos_2.1.1/drivers/broadcom/usb/usbnfpclass/: nfpclass.c  nfpclass.h  nfpinterface.c  nfpmemblock.h
driver_mpos_2.1.1/drivers/broadcom/usbh/: CMakeLists.txt  usb_host_bcm5820x.c  usb_host_bcm5820x.h
driver_mpos_2.1.1/drivers/broadcom/usbh/class/: Makefile  usbdriver.c
driver_mpos_2.1.1/drivers/broadcom/usbh/host/: Makefile  ehci.c  ohci.c  ohci.h
driver_mpos_2.1.1/drivers/broadcom/wdt/: Makefile
samples/testing/broadcom/: CMakeLists.txt
samples/testing/broadcom/src/: test.c
samples/testing/broadcom/src/cpu/: cpu.c
samples/testing/broadcom/src/drivers/: CMakeLists.txt  Makefile
samples/testing/broadcom/src/fp_spi/: CMakeLists.txt
samples/testing/broadcom/src/zbar/: CMakeLists.txt  Makefile  QR_Image_Y800_VGA.c  test_zbar.c
(+960 files in other folders)
