add_subdirectory(clock_control)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_ADC adc)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_BBL bbl)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_CRYPTO crypto)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_CRYPTO pka)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_DMA dma)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_DMU dmu)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_FT flextimer)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_GPIO gpio)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_KEYPAD keypad)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_I2C i2c)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_PM pm)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_PRINTER printer)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_PWM pwm)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_QSPI qspi_flash)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_RTC rtc)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SCC sc)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SDIO sdio)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SMAU smau)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SMC smc)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SOTP sotp)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SPI spi)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_SPL spl)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_TIMERS timer)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_UNICAM unicam)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_USB usbh)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_LCD lcd)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_WDT wdt)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_USBD usbd)
add_subdirectory_ifdef(CONFIG_BRCM_DRIVER_USBH usbh)
